# VESPID

./: .gitignore  CMakeLists.txt  MIT-LICENSE  README.md
cmake/Modules/: Findpigpio.cmake
splash/vespid/: vespid.plymouth  vespid.script
src/: CMakeLists.txt  camera.cc  camera.hh  cmake_config.h.in  gpio.cc  gpio.hh  gui.cc  gui.hh  image.cc  image.hh  main.cc  util.cc  util.hh
torchnn/: test.lua  train.lua
